scripts/nullaway/annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8.txt
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/core/Tablero.java:85: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return tablero.get(point);
		^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/ui/TableroUI.java:297: error: [NullAway] switch expression tableroLogica.obtenerTablero().get(new Point(fila, columna)) is @Nullable
				switch(tableroLogica.obtenerTablero().get(new Point(fila, columna))){
				                                         ^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/ui/TableroUI.java:297: error: [NullAway] dereferenced expression tableroLogica is @Nullable
				switch(tableroLogica.obtenerTablero().get(new Point(fila, columna))){
				                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/othello/UIJuego.java:230: error: [NullAway] dereferenced expression movidasPosibles is @Nullable
		if (movidasPosibles.contains(movidaSeleccionada)) {
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:48: error: [NullAway] initializer method does not guarantee @NonNull fields jugadorBlanco (line 35), jugadorNegro (line 36) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Controlador() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:250: error: [NullAway] dereferenced expression penultimaLinea is @Nullable
			String[] dimension1 = penultimaLinea.split(",");
			                                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:251: error: [NullAway] dereferenced expression lineaFinal is @Nullable
			String[] dimension2 = lineaFinal.split(",");
			                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:335: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return esquinas;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Direccion.java:28: error: [NullAway] dereferenced expression point is @Nullable
		return new Point(point.x + pasoEnFila, point.y + pasoEnColumna);
		                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/evaluacion/EvaluacionEstrategica.java:26: error: [NullAway] dereferenced expression estrategia is @Nullable
		A = estrategia[0];
		              ^
    (see http://t.uber.com/nullaway )
../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/evaluacion/EvaluacionEstrategica.java:183: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return esquinas;
		^
    (see http://t.uber.com/nullaway )
Note: ../annotator/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/othello/UIJuego.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
11 errors
